# pubcFS

./: .gitattributes  AUTHORS  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  libtool  readme.md
src/: Makefile  Makefile.am  Makefile.in  fuse_operations.c  fuse_operations.h  libbase64.la  libbase64_la-base64.lo  libfuseoperations.la  libfuseoperations_la-fuse_operations.lo  libmconfig.la  libmconfig_la-mConfig.lo  libpubcfsfunctions.la  libpubcfsfunctions_la-pubcfs.lo  libutil.la  libutil_la-util.lo  main.c  main.h  pubcfs  pubcfs-config  pubcfs-config.c  pubcfs.c  pubcfs.h  util.c  util.h
src/.deps/: libbase64_la-base64.Plo  libfuseoperations_la-fuse_operations.Plo  libmconfig_la-mConfig.Plo  libpubcfsfunctions_la-pubcfs.Plo  libutil_la-util.Plo  pubcfs-main.Po  pubcfs_config-pubcfs-config.Po
src/.libs/: libfuseoperations.la  libmconfig.la  libpubcfsfunctions.la
src/base64/: base64.c  base64.h
src/mConfig/: mConfig.c  mConfig.h
tests/: Makefile  base64_test.c
tests/keys/: key.priv.pem  key.pub.pem  key2.priv.pem  key2.pub.pem
tests/root/: enc_vvbWrf8=
tests/root/.pubcfs/: config
tests/root/.pubcfs/keys/: miro  miro2
tests/root/cartella in chiaro/: sbabumba
tests/root/enc_rcUKPw==/enc_vT8hda-yVg==/: ciao
tests/root/enc_rcUKPw==/giacalozzo/: supremo
